# Semesterarbeit_Magnet

./: CMakeLists.txt  CMakelists.txt  Mesh accuracy comparison.txt  README.md  Test_accuracy_report  benchmark_parallel.cpp  build.bat  jacobian_code.docx  jacobian_section.docx  plot_3d_results.py  reorder_rajectory.py  run.bat  run_benchmark.bat  run_comparision.bat  run_test_accuracy.bat  setup.bat  statistical_test.py  test_model_accuracy.cpp  visualize_benchmark.py  visualize_comparison.py
Teil_1/: Biot_formula.py  Biot_formula_result.txt  Dipole_formula.py  Dipole_formula_result.txt  Punkt.py
Teil_2/: plot_3_3.py  plot_3_4.py
Teil_2/B-H Kurve/: Random_Biot.csv  Random_Dipole.csv  Random_Mag.csv  X0_Biot.csv  X0_Dipole.csv  X0_Mag.csv  X5_Biot.csv  X5_Mag.csv  Y5_Biot.csv  Y5_Dipole.csv  Y5_Mag.csv  Z0_Biot.csv  Z0_Dipole.csv  Z0_Mag.csv  Z5_Biot.csv  Z5_Dipole.csv  Z5_Mag.csv
Teil_2/results/: three_way_comparison_summary.csv
Teil_3/: 1_Punkte_N.txt  Biot_result.txt  Dipole_result.txt  Punkte41.py  Punkte41_result.txt  biot_field.py  dipole_field.py
Teil_4/: Punkte41_Numba.py  Punkte41_umgekehrt.py  PunkteN.py  results.txt
Teil_4/__pycache__/: Punkte41_Numba._biot_savart_sum-117.py313.1.nbc  Punkte41_Numba._biot_savart_sum-117.py313.nbi
Teil_4_C++/: .gitignore.txt  CMakeLists.txt  Project_structure.md  Quick_reference.md  Sync_share_guide.md  benchmark_parallel.cpp  build.bat  run_comparision.bat  statistical_test.py  visualize_benchmark.py  visualize_comparison.py
Teil_4_C++/include/: config.hpp  geometry.hpp
Teil_4_C++/results/: benchmark_parallel.csv  benchmark_report.txt  comparison_report.txt  statistical_test_report.txt
Teil_4_C++/src/: model_adapters.cpp  pose_optimizer.cpp  pose_optimizer_generic.cpp
data/: Observational_data.csv  Observational_data_new.csv  Observational_data_sequential.csv  current_calibration_Dipole.json  earth_calibration.json  sensors_41.csv
include/: biot_field.hpp  config.hpp  cpu_topology.hpp  csv_parser.hpp  dipole_field.hpp  geometry.hpp  io_utils.hpp  model.hpp  model_adapters.hpp  motion_predictor.hpp  pose_optimizer.hpp  pose_optimizer_generic.hpp  sensors_data.hpp
python_support/data/: earth_calibration_with_zeroing_data.json
python_support/docs/: METHOD.md  README.md
results/: benchmark_parallel.csv  benchmark_report.txt  biot_savart_results.csv  comparison_report.txt  dipole_results.csv  model_comparison_summary.txt  opt_summary.csv  pose_error_summary.csv  statistical_test_report.txt
scripts/: Discretization.py  ForwardModel.py  Geometry.py  OrientationFrameUtilities.py  PoseEstimation.py  generate_cpp.py
src/: biot_field.cpp  dipole_field.cpp  io_utils.cpp  main.cpp  main_comparison.cpp  model.cpp  model_adapters.cpp  model_data.cpp  pose_optimizer.cpp  pose_optimizer_generic.cpp
src/results/: benchmark_parallel.csv  benchmark_report.txt  biot_savart_results.csv
test/: test_generation.py  test_points_N.py
